--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -36,10 +36,28 @@
 			%tr
 				%td Страна проживания:
 				%td= @user.user_country ||= "Не известно"
-		
-	.admin-panel
-		%ul
-			%li= link_to "Редактировать", edit_admin_user_path(@user)
-			%li= link_to "Удалить", admin_user_path(@user), :method => :delete, :data => { :confirm => "Вы уверенны, что хотите удалить пользователя '#{@user.username}'" }
-			%li= link_to "К списку Пользователей", admin_users_path
+		.last-user-articles
+			- if @user.articles.any?
+				%h3 Пользователь является автором #{@user.articles.count} статей :
+				- @user.articles.limit(5).each do |user_article|
+					= link_to user_article.title, article_path
+			- else
+				Пользователь пока не написал ни одной статьи
+		.last-user-comments
+			- if @user.comments.any?
+				%h3 Пользователь оставил #{@user.comments.count} комментариев 
+				Последние комментарии :
+				%br
+				%br
+				- @user.comments.limit(5).each do |user_comment|
+					.user-comment-body= user_comment.body
+					К статье :#{link_to user_comment.article.title, article_path}
+			- else
+				Пользователь пока не написал ни одного комментария
+	- if current_user.role? :admin 		
+		.admin-panel
+			%ul
+				%li= link_to "Редактировать", edit_admin_user_path(@user)
+				%li= link_to "Удалить", admin_user_path(@user), :method => :delete, :data => { :confirm => "Вы уверенны, что хотите удалить пользователя '#{@user.username}'" }
+				%li= link_to "К списку Пользователей", admin_users_path
 .clearfix
