base specs add/fixed

--- a/app/assets/stylesheets/articles.css.scss
+++ b/app/assets/stylesheets/articles.css.scss
@@ -46,6 +46,7 @@ textarea {
 		text-align: center;
 		background: #a5d1e4;
 		margin-left: 2px;
+		margin-bottom: 2px;
 		padding: 3px;
 		color: #fff;
 	}
