--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -9,7 +9,7 @@
                     <ul id="menu">
                         <li><%= link_to "Блог", articles_path %></li>
                         <li><a href="#">Галлерея</a></li>
-                        <li><a href="#">Чтение</a></li>
+                        <li><%= link_to "Чтение", books_path %></li>
                         <li><a href="#">Новости</a></li>
                         <li><a href="#">Контакты</a></li>
                         <li><%= link_to "Эбаут", about_path %></li>
