--- a/app/views/books/new.html.haml
+++ b/app/views/books/new.html.haml
@@ -1,3 +1,9 @@
-#new_book
-	= render "form"
-	= link_to 'Назад', books_path	
+.row.span5.offset4
+  %h2
+    Меню создания новой книги:
+  Обязательно заполните поля помеченные *
+  %br
+  %br
+  = render "form"
+  = link_to 'Назад', books_path
+.clearfix
