--- a/app/assets/stylesheets/modules/_all.css.sass
+++ b/app/assets/stylesheets/modules/_all.css.sass
@@ -2,9 +2,11 @@
    Including modules
    ========================================================================== */
 
+@import "footer"
+@import "header"
+
 @import "articles"
 @import "books"
 @import "categories"
-@import "comments"
 @import "tags"
 @import "users"
