--- a/app/assets/stylesheets/partials/_mixins.css.sass
+++ b/app/assets/stylesheets/partials/_mixins.css.sass
@@ -13,3 +13,6 @@
   -moz-border-radius: $radius
   -o-border-radius: $radius
   border-radius: $radius
+
+@mixin _border($color, $style: solid)
+  border: 1px $style $color
