--- a/app/assets/stylesheets/modules/articles.css.scss
+++ b/app/assets/stylesheets/modules/articles.css.scss
@@ -1,23 +1,3 @@
-.field input[type=password], input[type=email], input[type=text], textarea {
-    width: 100%;
-    font-size: 25px;
-    height: 50px;
-    padding: 4px 4px 4px 10px;
-    border: 1px solid #c6d9e9;
-}
-
-ul.tags a {
-
-}
-
-label {
-	font-size: 14px;
-}
-
-textarea {
-	width: 100%; 
-}
-
 #articles {
 	width: 820px;
 	float: left;
@@ -67,7 +47,7 @@ textarea {
 		width: 680px;
 
 		.tag a{
-			font-size: 12px;
+			font-size: $base-font-size - 1;
 		}
 
 		.tag a:hover{
@@ -88,7 +68,7 @@ textarea {
 
 		.author {
 			color: #CCC;
-			font-size: 15px;
+			font-size: $base-font-size + 2;
 		}
 
 		.content {
@@ -98,7 +78,7 @@ textarea {
 		.fullread {
 			text-align: right;
 			a {
-				font-size: 12px;
+				font-size: $base-font-size - 1;
 			}
 			a:hover{
 				text-decoration: underline;
@@ -114,7 +94,7 @@ textarea {
 	}
 
 	.month {
-		font-size: 16px;
+		font-size: $base-font-size + 3;
 		color: #B2B2B2;
 	}
 
@@ -129,7 +109,7 @@ textarea {
 
 	.category a {
 		padding: 4px;
-		border-radius: 4px;
+		@include border-radius(4px);
 		background-color: #758EA2;
 		color: #fff;
 	}
@@ -143,21 +123,21 @@ textarea {
 
 	background-color: #e4ebee;
 	padding: 5px;
-	
+
 	ul li {
 		display: inline-block;
 	}
 }
 
 #article-show {
-	
+
 	width: 100%;
 	padding: 3px;
 	background: #EEE;
-	border-radius: 3px;
+	@include border-radius(3px);
 
 	span.title {
-		font-size: 16px;
+		font-size: $base-font-size + 3;
 		line-height: 20px;
 		font-weight: bold;
 		padding: 10px 10px;
@@ -171,7 +151,7 @@ textarea {
 	}
 
 	span.footer {
-		font-size: 13px;
+		font-size: $base-font-size;
 		line-height: 20px;
 		padding: 10px 10px;
 		color: #555;
@@ -193,7 +173,7 @@ textarea {
 
 	.body {
 		background-color: #fff;
-		border: 1px solid #CACACA;
+		@include _border(#CACACA);
 		padding: 30px;
 		overflow: hidden;
 	}
@@ -207,7 +187,7 @@ textarea {
 			border-left: 2px dotted #88b5cf;
 			padding: 2px 5px;
 			color: #9e9e9e;
-			font-size: 14px;
+			font-size: $base-font-size + 1;
 		}
 
 		.changed {
@@ -228,12 +208,12 @@ textarea {
 		}
 
 		.author {
-			color: #9e9e9e; 
-			font-size: 14px;
+			color: #9e9e9e;
+			font-size: $base-font-size + 1;
 		}
 
 		.content {
-			font-size: 15px;
+			font-size: $base-font-size + 2;
 		}
 
 		.category {
@@ -242,7 +222,7 @@ textarea {
 
 		.category a {
 			padding: 4px;
-			border-radius: 4px;
+			@include border-radius(4px);
 			background-color: #758EA2;
 			color: #fff;
 		}
@@ -260,10 +240,12 @@ textarea {
 
 		.views {
 			float: right;
-			font-size: 13px;
+			font-size: $base-font-size;
 			color: #666;
 		}
 	}
+
+/* Список комментариев */
 
 	.comments {
 
@@ -279,7 +261,6 @@ textarea {
 		}
 
 		.body {
-			/*background: #e3e9ee;*/
 			padding: 10px;
 			height: 100%;
 			border: none;
@@ -289,10 +270,8 @@ textarea {
 		.username {
 			width: 100%;
 			border-bottom: 1px dotted #fa8072;
-			font-size: 11px;
+			font-size: $base-font-size - 2;
 		}
-
-		/* Список комментариев */
 
 		ol{
 			counter-reset: li; /* Инициируем счетчик */
@@ -315,7 +294,7 @@ textarea {
 
 		.rectangle-list:hover{
 			background: #ddd;
-		}       
+		}
 
 		.rectangle-list:before{
 			content: counter(li);
@@ -345,7 +324,7 @@ textarea {
 		.rectangle-list:hover:after{
 			left: -.5em;
 			border-left-color: #fa8072;
-		} 
+		}
 
 	}
 
@@ -360,7 +339,7 @@ textarea {
 
 .tags a {
 	padding: 4px;
-	border-radius: 2px;
+	@include border-radius(2px);
 	background-color: #51a4dd;
 	color: #fff;
 	margin-right: 5px;
