--- a/app/views/articles/_form.html.haml
+++ b/app/views/articles/_form.html.haml
@@ -4,16 +4,17 @@
 
   .field
     = f.label :title, "Заголовок статьи :"
-    = f.text_field :title, placeholder:"Введите сюда название статьи"
+    = f.text_field :title, placeholder:"Введите сюда название статьи", class: "span9"
     %br
     %span.input-helper Этот заголовок будет выводиться как название статьи при просмотре
     %br
   .field
     = javascript_include_tag "/javascripts/ckeditor/config.js"
     = f.label :content, "Содержание статьи :"
-    = f.text_area :content
+    = f.text_area :content, class: "span9"
     %br
     %span.input-helper Заносите сюда всё, что касается содержания статьи: текст, изображения и т.д.
+    %br
     %br
   .field
     = f.label :category_id,  "Выберите категорию :"
@@ -22,6 +23,7 @@
     %span.input-helper Укажите категорию в которую будет помещенна статья
     %br
   .field
+    %br
     = f.label :tag_ids,  "Выберите теги :"
     - @tags.each do |tag|
       = check_box_tag "article[tag_ids][]", tag.id
@@ -29,11 +31,11 @@
     %br
     %span.input-helper Отметьте теги к которым будет относиться данная статья
     %br
+    %br
   - if can? :manage, Article
     .field
       = f.label :published, "Опубликовать ?"
       = f.check_box :published
-      %br
       %span.input-helper Публикуйте статью, только если она правильно оформленна
       %br
   .actions
