--- a/app/views/articles/new.html.haml
+++ b/app/views/articles/new.html.haml
@@ -1,6 +1,6 @@
 - provide(:title, "Создание статьи")
-%h1 > Создание новой статьи
-
-= render 'form'
-
-= link_to 'Назад', articles_path
+.row.span8.offset2
+  %h1 > Создание новой статьи
+  = render 'form'
+  = link_to 'Назад', articles_path
+.clearfix
