--- a/app/assets/stylesheets/modules/users.css.scss
+++ b/app/assets/stylesheets/modules/users.css.scss
@@ -5,7 +5,7 @@
 		th {
 			background-color: #ebeef4;
 			padding: 8px;
-			border-left: 2px solid #fff; 
+			border-left: 2px solid #fff;
 		}
 
 		td {
@@ -72,74 +72,5 @@
 
 }
 
-#register {
-
-    width: 1020px;
-    margin: auto;
-    padding-top: 15px;
-
-    .reg-header {
-        background: #f9f9f9;
-        border: 1px solid #dfdfdf;
-        color: #333;
-        font-size: 1.8em;
-        padding: 10px;
-    }
-
-    tbody {
-        display: table-row-group;
-        vertical-align: middle;
-    }
-
-    tr {
-        border-bottom: 8px solid #fff;
-        display: table-row;
-        vertical-align: inherit;
-    }
-
-    td.field {
-        width: 700px;
-        background: #f1f1f1;
-        font-size: 16px;
-        position: relative;
-        padding: 13px;
-    }
-
-    td.help {
-        background: #f9f9f9;
-        text-shadow: 0px 1px 0px #FFF;
-        position: relative;
-        width: 295px;
-        vertical-align: top;
-        font-size: 13px;
-        padding: 13px;
-        color: #666;
-    }
-
-    td.field input[type=password], input[type=email], input[type=text], textarea {
-        width: 675px;
-        font-size: 25px;
-        height: 50px;
-        padding: 4px 4px 4px 10px;
-        border: 1px solid #c6d9e9;
-    }
-
-    td select {
-    	width: 30%;
-    	color: #333;
-    	font-size: 18px;
-    	font-weight: lighter;
-    	padding: 5px;
-    }
-
-    td textarea {
-        font-size: 20px;
-        height: 200px;
-    }
-
-    td label {
-        color: #444;
-        margin-bottom: 10px;
-    }
-
-}
+@import "register";
+@import "auth";
