--- a/app/assets/stylesheets/partials/_colors.css.sass
+++ b/app/assets/stylesheets/partials/_colors.css.sass
@@ -8,6 +8,7 @@ $_bg_info_blue: #BDE5F8
 $_bg_notice_green: #DFF2BF
 $_bg_alert_orange: #FEEFB3
 $_bg_error_red: #FFBABA
+$f9: #f9f9f9
 
 /* text */
 
@@ -15,3 +16,8 @@ $_txt_blue: #00529B
 $_txt_green: #4F8A10
 $_txt_orange: #9F6000
 $_txt_red: #D8000C
+$_txt_default: #333
+
+/* tags */
+$light_blue: #51a4dd
+$std_white: #fff
