--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -111,7 +111,11 @@ h1 {
     color: #999;
 }
 
-
+.headline1 {
+    border-left: 7px solid #479ccf;
+    margin: 5 -30px 15px -22px;
+    padding: 5px 15px;
+}
 
 /* ==========================================================================
    Chrome Frame prompt
