--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -2,6 +2,10 @@
 @import "partials/base";
 
 // Partials
+@import "partials/markup";
+@import "partials/boilerplate";
+@import "partials/normalize";
+@import "partials/typografy";
 @import "partials/reset";
 @import "partials/buttons";
 @import "partials/flashes";
