--- a/app/views/backend/_link_resorces.html.haml
+++ b/app/views/backend/_link_resorces.html.haml
@@ -11,7 +11,7 @@
 		%ul
 			%li= link_to "Администрирование статей", backend_articles_path
 			%li= link_to "Администрирование категорий", backend_categories_path
-			%li= link_to "Создать статью", new_article_path
+			%li= link_to "Создать статью", new_backend_article_path
 			%li= link_to "Создать категорию", new_backend_category_path
 			%li= link_to "Статьи ожидающие публикации", unpublished_articles_path
 	.admin-item
