--- a/app/views/backend/articles/index.html.haml
+++ b/app/views/backend/articles/index.html.haml
@@ -2,9 +2,10 @@
 %h1.headline1 Администрирование статей :
 #articles
   .new_link
-    = link_to "Создать новую статью", new_backend_article_path
-    %br
-    = link_to 'Статьи ожидающие публикации', unpublished_articles_path
+    - if can? :create, Article
+      = link_to "Создать новую статью", new_backend_article_path
+      %br
+      = params[:unpublished] ? link_to('Все статьи', backend_articles_path) : link_to('Статьи ожидающие публикации', backend_articles_path + '/unpublished')
   - if !@articles.empty?
     .paginate= paginate @articles
     %table.little-table
@@ -22,6 +23,5 @@
     %br
   - else
     .no-content
-      К сожалению опубликованных статей пока нет!
-  
+      К сожалению опубликованных статей пока нет! 
 .clearfix
