--- a/app/views/backend/tags/_form.html.haml
+++ b/app/views/backend/tags/_form.html.haml
@@ -1,4 +1,4 @@
-﻿= form_for @tag, html: { class: "backend-little-form" } do |f|
+﻿= form_for [:backend, @tag], html: { class: "backend-little-form" } do |f|
   .form-wrapper
     - if @tag.errors.any?
       = render "common/errors", object: @tag
