--- a/app/assets/stylesheets/modules/_auth.css.sass
+++ b/app/assets/stylesheets/modules/_auth.css.sass
@@ -1,28 +1,89 @@
 /* Авторизация */
 
-#sign_in
-  @include _border($std_white)
-  @include border-radius(5px)
-  :width 500px
-  :margin 0 auto
-  :position relative
-  :z-index 5
-  :background #f3f3f3
-  :box-shadow 0 0 10px rgba(0,0,0,0.25)
-  :-moz-box-shadow 0 0 10px rgba(0,0,0,0.25)
-  :-webkit-box-shadow 0 0 10px
-  :padding 20px
-  :margin-top 50px
+#loginForm
+  :width 390px
+  :padding 24px 24px 0
+  :margin 20px auto 0
+  :background #FEFEFE
+  :border 1px solid #CAD8DE
+  :border-radius 4px
+  :box-shadow 0 1px 2px rgba(0,0,0,0.08)
+  :font 14px/18px Arial, Tahoma, sans-serif
+  :color #444
 
-.new_user span
-  :line-height 16px
-  :color #678889
+  .field
+    :margin 0 0 18px
 
-.new_user a:hover
-  :text-decoration underline
+  .field label
+    :display block
+    :margin 0 0 11px
 
-.new_user input[type=text], input[type=password]
-  :width 95%
-  :height 40px
-  :font
-    :size $base-font-size * 2
+  .field .input
+    :border-radius 4px
+
+  .field input
+    :font 12px Arial, Tahoma, sans-serif
+    :color #444
+    :width 362px
+    :padding 9px 13px
+    :border 1px solid #D2D9DC
+    :border-radius 3px
+    :box-shadow inset 2px 2px 6px #EBEBEB, 0 0 0 5px #F7F9FA
+    :outline none
+
+  .field input:focus
+    :border-color #B7D4EA
+    :box-shadow inset 2px 2px 6px #EBEBEB, 0 0 4px #D0E6F6, 0 0 0 5px #F2F8FC
+
+  #forgot
+    :float right
+    :font-size 11px
+    :color #ababab
+    :text-decoration none
+    :margin 0
+
+  #forgot:hover
+    :color #444
+    :text-decoration underline
+
+  .submit
+    :overflow hidden
+    :margin 30px -24px 0
+    :padding 22px 24px
+    :background #F0F5F7
+    :border-top 1px solid #DDE0E8
+    :border-radius 0 0 4px 4px
+    :box-shadow inset 0 1px #FFF, inset -1px -1px #F7FAFB, inset 1px 0 #F7FAFB
+    :font-size 11px
+
+  #remember
+    :display block
+    :margin 5px 0 0
+    :cursor pointer
+
+  #remember input
+    :margin 0 4px 0 0
+    :vertical-align middle
+
+  .submit input[type=submit]
+    :float right
+    :padding 6px 20px
+    :height 30px
+    :border-top 1px solid #98CCE7
+    :border-bottom 1px solid #7DB0CC
+    :border-left 1px solid #8CBFD9
+    :border-right 1px solid #8CBFD9
+    :border-radius 15px
+    :color #FFF
+    :font bold 13px Arial, Tahoma, sans-serif
+    :box-shadow inset 0 1px #D4EBF7, 0 1px 3px #B8BEBE
+    :background -moz-linear-gradient(top,  #badff3 0%, #7acbed 100%)
+    :background -webkit-gradient(linear, left top, left bottom, color-stop(0%,#badff3), color-stop(100%,#7acbed))
+    :background -webkit-linear-gradient(top,  #badff3 0%,#7acbed 100%)
+    :background -o-linear-gradient(top,  #badff3 0%,#7acbed 100%)
+    :background -ms-linear-gradient(top,  #badff3 0%,#7acbed 100%)
+    :background linear-gradient(top,  #badff3 0%,#7acbed 100%)
+    :background-color #9FD7F0
+    :cursor pointer
+    :text-shadow 0 -1px rgba(0,0,0,0.15)
+    :outline none
