--- a/app/assets/stylesheets/partials/_buttons.css.sass
+++ b/app/assets/stylesheets/partials/_buttons.css.sass
@@ -11,19 +11,10 @@
   :padding 7px 15px
 
 .button-primary-light-green
-  @include border-radius(1px)
-  :background #96bf48
-  :border 1px solid #8bb43f
-  :text-shadow 0 1px 0 #80a53a
+  @include button_primary(#96bf48, #8bb43f, #80a53a)
 
 .button-primary-light-blue
-  @include border-radius(1px)
-  :background #04a4cc
-  :border 1px solid #0d8fba
-  :text-shadow 0 1px 0 #6eb0c6
+  @include button_primary(#04a4cc, #0d8fba, #6eb0c6)
 
 .button-primary-light-red
-  @include border-radius(1px)
-  :background #c76b5c
-  :border 1px solid #b9321c
-  :text-shadow 0 1px 0 #b9321c
+  @include button_primary(#c76b5c, #b9321c, #b9321c)
