--- a/app/assets/stylesheets/modules/_auth.css.sass
+++ b/app/assets/stylesheets/modules/_auth.css.sass
@@ -56,16 +56,7 @@
     :box-shadow inset 0 1px #FFF, inset -1px -1px #F7FAFB, inset 1px 0 #F7FAFB
     :font-size 11px
 
-  #remember
-    :display block
-    :margin 5px 0 0
-    :cursor pointer
-
-  #remember input
-    :margin 0 4px 0 0
-    :vertical-align middle
-
-  .submit input[type=submit]
+  .submit input[type=submit], input[type=file]
     :float right
     :padding 6px 20px
     :height 30px
