Cucumber features added |backend_articles,articles|

--- a/app/views/articles/show.html.haml
+++ b/app/views/articles/show.html.haml
@@ -37,7 +37,9 @@
       %br
       .clearfix
       -if can? :manage, Article
-        = link_to 'Редактировать статью', edit_article_path(@article)
+        = link_to 'Редактировать статью', edit_backend_article_path(@article)
+        \|
+        = link_to "Удалить статью", backend_article_path(@article), method: :delete, data:{ confirm: "Вы уверенны, что хотите удалить статью '#{@article.title}'?" }
         \|
         = link_to 'Назад', articles_path
       %br
