--- a/app/views/backend/articles/new.html.haml
+++ b/app/views/backend/articles/new.html.haml
@@ -1,6 +1,6 @@
 - provide(:title, "Создание статьи")
 .row.span8.offset2
-  %h1 > Создание новой статьи
+  %h1.headline1 > Создание новой статьи
   = render 'form'
   = link_to 'Назад', articles_path
 .clearfix
