added layout to http error page

--- a/app/views/errors/route_error_500.html.haml
+++ b/app/views/errors/route_error_500.html.haml
@@ -1,6 +1,6 @@
-﻿- provide :title, 'Server says - 404 :('
+- provide :title, 'Server says - 500 :('
 = content_for :http_error_page do
-  %h2 404
+  %h2 500
   %div
     %h3 We're sorry
     %p
