updated presenter styles

--- a/app/assets/stylesheets/modules/_home.css.sass
+++ b/app/assets/stylesheets/modules/_home.css.sass
@@ -1,3 +1,15 @@
+.index-link
+	:background #333
+	:color #eee
+	:display inline-block
+	:font-size 13px
+	:padding 8px 5px
+	:margin 1px
+
+.last-articles
+.blog-items
+	:overflow hidden
+
 .post
 	:float left
 	:margin-bottom 20px
@@ -42,8 +54,6 @@
 		:text-align center
 		:margin-bottom 20px
 
-	.content
-
 .article-category
 	:text-transform uppercase
 	:color #707070
@@ -57,7 +67,8 @@
 	:font-weight bold
 	:text-transform uppercase
 
-.header-item
+.header-item,
+.header-item-right
 	:background #F9F9F9
 	:border 1px solid #EEEEEE
 	:border-width 1px 0
@@ -68,4 +79,25 @@
 
 	p
 		:padding 10px
-		:font-size 18px
+		:font-size 26px
+		:color #333
+		:font-family "Dosis", Arial, Helvetica, Geneva, sans-serif
+		:font-weight 200
+		:line-height 1.25em
+		:margin 0 0 0.2em 0.5em
+
+.header-item-right
+	:background #b6a48b
+
+.blog-left-items
+	:width 60%
+	:float left
+	:height 300px
+
+.blog-right-items
+	:width 40%
+	:float right
+	:height 300px
+
+.item-content
+	:padding-left 15px
