refactoring Articles|Comments modules

--- a/app/views/static_pages/home.html.haml
+++ b/app/views/static_pages/home.html.haml
@@ -1,4 +1,4 @@
-﻿- provide(:title, "Главная")
+- provide(:title, "Главная")
 %h1 My Draft
 %p= link_to "My Draft", :controller => :static_pages, :action => :home
 
