--- a/app/assets/stylesheets/modules/_home.css.sass
+++ b/app/assets/stylesheets/modules/_home.css.sass
@@ -101,3 +101,26 @@
 
 .item-content
 	:padding-left 15px
+
+.book-item
+	@include border-radius(5px)
+	:width 210px
+	:background #EFEFEF
+	:border 1px solid #C0C0C0
+	:-webkit-box-shadow 0px 0px 3px rgba(0,0,0,0.25)
+	:-moz-box-shadow 0px 0px 3px rgba(0,0,0,0.25)
+	:box-shadow 0px 0px 3px rgba(0,0,0,0.25)
+	:-webkit-box-sizing border-box
+	:-moz-box-sizing border-box
+	:box-sizing border-box
+	:max-width 100%
+	:padding 5px 3px 10px 3px
+	:text-align center
+
+	.author
+		:color #666
+		:font-size 11px
+		:font-style italic
+		:line-height 1
+		:margin 0
+		:padding 4px 5px 0 5px
