--- a/app/views/articles/show.html.haml
+++ b/app/views/articles/show.html.haml
@@ -65,7 +65,7 @@
       %span.view= @article.views
     .item
       Комментариев :
-      %span.view= @article.comments.count
+      %span.view= @article.comments.size
     .item
       Автор :
       = @article.user.username
