--- a/app/views/backend/book_categories/index.html.haml
+++ b/app/views/backend/book_categories/index.html.haml
@@ -15,6 +15,6 @@
 				%td= index + 1
 				%td= category.name
 				%td= category.description
-				%td= category.books.count
+				%td= category.books.size
 				%td= link_to "Статьи с этим тегом", '#'
 				%td= #link_to "Удалить", category, method: :delete, data:{confirm:"Категория '#{category.name}' будет удалёна!"}
