--- a/app/views/articles/_comments.html.haml
+++ b/app/views/articles/_comments.html.haml
@@ -5,7 +5,7 @@
 				= image_tag "/img/default_user_avatar.png" #comment.user.avatar ||
 			.body
 				.username
-					Оставил пользователь : <b>#{link_to @article.user.username, user_path(@article.user.id)}</b>, #{format_date comment.created_at}
+					Оставил пользователь : <b>#{link_to comment.author_username, user_path(comment.user.id)}</b>, #{format_date comment.created_at}
 				%br
 				.content
 					= comment.body
