--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -18,6 +18,7 @@
         = stylesheet_link_tag    "main.css"
 
         / require scripts & libraries
+        = javascript_include_tag "tinymce/tinymce.min"
         = javascript_include_tag "application"
         = javascript_include_tag "javascripts/vendor/modernizr-2.6.2.min"
         = javascript_include_tag "javascripts/vendor/jquery-1.8.3.min"
