--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -34,6 +34,7 @@
             %br
             = render "common/notice"
             %br
+            = raw breadcrumbs
             = yield
             %br
             %br
